# data

./: .env.local  .gitignore  CHANGELOG.md  Dockerfile  TSM-schema-for-the-growth-planning-tool  TSM.sql  bitbucket-pipelines.yml  docker-compose.yml  generate_schema.py  historical_logs  instagram_sstm.yaml  ld_sstm.yaml  local_dev_notebook.ipynb  main.py  pyproject.toml  requirements.txt  sample.env.local  settings.py  src-lead.yaml  src.yaml  sstm.yaml  sstm.yml  sstm_backup.yml  temp_wh_connection.py  utils.py
.ipynb_checkpoints/: local_dev_notebook-checkpoint.ipynb  prod-data-sstm-transformation-checkpoint.ipynb
api_server/: app.py  config.py  exceptions.py  helper.py
api_server/swagger/: oas.json  oas.yml
confs/: ld_sstm.yaml  src-lead.yaml  src.yaml  sstm.yaml
etl/: collections.py  contact.py  datamodel.py  destination.py  form.py  helper.py  modeletl.py  project.py  projecttypes.py
etl/lead/: core.py  lead_contact.py  lead_detail.py  lead_modeletl.py  lead_opport.py  (+4 more)
filevine/: client.py  sync.py
leaddocket/: client.py
models/: request.py  response.py
notebooks/: instragram-sstm-transformation.ipynb  ld-sstm-transformation.ipynb  local_dev_notebook copy.ipynb  local_dev_notebook.ipynb  prod-data-sstm-transformation.ipynb
service/: aws.py  truve_api.py
sstm_transformation/: datamodel.py  dev-sstm-transformation.ipynb  instagram_builder.py  ld_builder.py  tsm_builder.py  tsm_schema.yaml
task/: tasks.py
tasks/: helper.py  hist_helper.py  subscriptions.py  tasks.py
tests/: form.py  pipeline.py
transformation/: datamodel.py  tsm_builder.py
(+31 files in other folders)
