[tool.poetry]
name = "sstm_transformation"
version = "0.1.6"
description = ""
authors = ["Shiv Kumar <skagrawal10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dacite = "^1.6.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
